@@ -1,3 +1,14 @@
+2012-10-29  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* sem_destroy.c: Remove NULL argument checks. These are only useful
+	to guard against some uninitialised arguments, not an invalid sem_t.
+	* sem_wait.c: Likewise.
+	* sem_post.c: Likewise.
+	* sem_post_multiple.c: Likewise.
+	* sem_timedwait.c: Likewise.
+	* sem_trywait.c: Likewise.
+	* ptw32_semwait.c: Likewise.
+
 2012-10-28  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* implement.h: sem_t_ replace internal state mutex with MCS lock.
